--- a/style.css
+++ b/style.css
@@ -2236,4 +2236,16 @@ section {
   text-align: left;
 }
 
+.draft-banner {
+  background: #f59e0b; /* orange shade */
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-weight: bold;
+  padding: 0.5rem;
+  position: sticky;
+  top: 0;
+  z-index: 9999;
+  opacity: 40%;
+}
+
 
